--- a/style/bio.scss
+++ b/style/bio.scss
@@ -1,30 +1,68 @@
 @import 'common';
 
+.bio-block {
+    background-color: #392e2e;
+    color: white;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    padding: 20px 0;
+    font-size: 20px;
+}
 
 .bio {
+    max-width: 600px;
+    margin: 0 auto;
     .content {
         margin: 0 auto;
         display: inline-block;
         display: flex;
+        position: relative;
     }
     .pic {
+        flex: 1;
         width: 100%;
+        position: relative;
+        align-self: center;
     }
     img {
         display: block;
         margin: 0 auto;
+        border-radius: 50%;
         height: 200px;
         width: 200px;
-        flex: none;
-        border-radius: 50%;
+
     }
     .description {
         @extend .content;
-        display: inline-block;
+        display: flex;
+        flex-direction: column;
     }
 
     .basic-info {
         margin-right: 20px;
-        display: inline-block;
+        width: 240px;
+        flex-shrink: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .basic-info * {
+        flex: 0;
+    }
+    .basic-info h1 {
+        display: block;
+        border-bottom: 2px solid white;
+        text-align: center;
+        //flex: 1;
+    }
+}
+
+.basic-info-line {
+    .name {
+        float: left;
+        font-weight: bold;
+    }
+    .value {
+        float: right;
     }
 }
