--- a/style/bio.scss
+++ b/style/bio.scss
@@ -1,7 +1,7 @@
 @import 'common';
 
 .bio-block {
-    background-color: #392e2e;
+    background-color: #394459;
     color: white;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     padding: 20px 0;
